End of Class Week 2 again

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     </head>
     <body>
         <p>Wouldn't you like to be a pepper too???</p>
+        <a href="Week1Lab/Week1Lab.html">Week 1 Lab</a>
+        <a href="Week2Lab/index.html">Week 2 Lab</a>
         
     </body>
 </html>
