--- a/Week2Lab/index.html
+++ b/Week2Lab/index.html
@@ -6,7 +6,7 @@
         <title>Week 2 CSS Lab</title>
         <!--Example of Linked Stylesheet-->
         <link rel="stylesheet" href="style.css">
-        <!--Example of In DOcument Stylesheet-->
+        <!--Example of In Document Stylesheet-->
         <style>
             /*CSS goes here*/
             h1{
@@ -28,6 +28,24 @@
             .newHeader{
                 color:purple;
             }
+
+            a:link{
+                color: chartreuse;
+                font-size: larger;
+                font-family: Arial, Helvetica, sans-serif;
+                text-decoration: none;
+            }
+
+            a:visited{
+                color: crimson;
+            }
+            a:hover{
+                color: darkblue;
+                text-decoration: underline;
+            }
+            a:active{
+                color: yellow;
+            }
         </style>
     </head>
     <body>
@@ -37,6 +55,9 @@
         <h1 class="newHeader">Welcome to Week 2 Lab</h1>
         <h1>Welcome to Week 2 Lab</h1>
         <h1 class="newHeader">Welcome to Week 2 Lab</h1>
+        <!--Anchor elements are for links-->
         <a href="riddles.html">Link to Week 2 Riddle Page</a>
+        <br>
+        <a href="#">Link to twitter</a>
     </body>
 </html>
