--- a/Week2Lab/DivLabWeek2.html
+++ b/Week2Lab/DivLabWeek2.html
@@ -36,6 +36,7 @@
             height:50px;
             display: flex;
             justify-content: center;
+            flex-wrap: wrap;
         }
 
         #content{
@@ -84,6 +85,22 @@
         </div>
         <div id="nav">
             <!--This is my list of navigation buttons-->
+            <a href="#" class="btn">Home</a>
+            <a href="#" class="btn">Bio</a>
+            <a href="#" class="btn">Games</a>
+            <a href="#" class="btn">Contact</a>
+            <a href="#" class="btn">Home</a>
+            <a href="#" class="btn">Bio</a>
+            <a href="#" class="btn">Games</a>
+            <a href="#" class="btn">Contact</a>
+            <a href="#" class="btn">Home</a>
+            <a href="#" class="btn">Bio</a>
+            <a href="#" class="btn">Games</a>
+            <a href="#" class="btn">Contact</a>
+            <a href="#" class="btn">Home</a>
+            <a href="#" class="btn">Bio</a>
+            <a href="#" class="btn">Games</a>
+            <a href="#" class="btn">Contact</a>
             <a href="#" class="btn">Home</a>
             <a href="#" class="btn">Bio</a>
             <a href="#" class="btn">Games</a>
