--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <li><a href="Week2Lab/index.html">Week 2 Lab</a></li>
             <li><a href="Week2Lab/DivLabWeek2.html">Week 2 Div Lab</a></li>
             <li><a href="Week3Lab/index.html">Week 3 Lab</a></li>
+            <li><a href="Week4Lab/index.html">Week 4 Lab</a></li>
         </ol>
         
         
